--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -26,6 +26,7 @@ permissions:
   packages: write
   id-token: write
   attestations: write
+  contents: read
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
