--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -59,7 +59,7 @@ jobs:
       #  run: make test
 
       - name: Download AutoComplete file
-        run: Invoke-WebRequest -Uri https://raw.githubusercontent.com/urfave/cli/v2.25.7/autocomplete/bash_autocomplete -OutFile bash_completion
+        run: Invoke-WebRequest -Uri https://raw.githubusercontent.com/urfave/cli/v2.25.7/autocomplete/bash_autocomplete -OutFile ./cmd/bash_completion
 
       - name: GoReleaser Action
         uses: goreleaser/goreleaser-action@v6
