--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -23,10 +23,9 @@ on:
 permissions:
   security-events: write
   actions: write
-  packages: write
   id-token: write
   attestations: write
-  contents: read
+  contents: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -120,6 +119,26 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
 
+      - name: Upload release assets
+        uses: actions/upload-artifact@v4
+        with:
+          name: go-aws-console-release
+
+  CreateAttestation:
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: Release
+    runs-on: ubuntu-latest
+    env:
+      GO111MODULE: on
+    steps:
+      - name: Download the release assets
+        uses: actions/download-artifact@v4
+        with:
+          name: go-aws-console-release
+
+      - name: List the release assets
+        run: ls -l
+
       - uses: actions/attest-build-provenance@v2
         with:
-          subject-checksums: ./cmd/dist/checksums.txt
+          subject-checksums: ./checksums.txt
