--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -123,6 +123,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: go-aws-console-release
+          path: cmd/dist/*
 
   CreateAttestation:
     if: startsWith(github.ref, 'refs/tags/v')
